<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertActivity"
    android:background="@drawable/img_background">


    <EditText
        android:id="@+id/insertPayerText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="500dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/payer"
        android:gravity="center"
        android:textColor="@color/black"
        android:inputType="text"
        android:fontFamily="@font/font3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/insertReceiverText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/reciever"
        android:inputType="text"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/font3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/insertAmountText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/edittext_background"
        android:layout_marginBottom="200dp"
        android:hint="@string/amount"
        android:inputType="number"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/font3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/insertCurrencyText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/currency"
        android:inputType="text"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/font3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </EditText>

    <EditText
        android:id="@+id/insertDateText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/payment_date"
        android:inputType="date"
        android:gravity="center"
        android:textColor="@color/black"
        android:fontFamily="@font/font3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/insertMethodText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/payment_method"
        android:inputType="text"
        android:gravity="center"
        android:fontFamily="@font/font3"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <Button
        android:id="@+id/insertbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/insert_payment"
        android:textSize="20sp"
        android:fontFamily="@font/font1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:onClick="back"
        android:scaleX="1.25"
        android:scaleY="1.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back" />

</androidx.constraintlayout.widget.ConstraintLayout>